# DocCycle-AI

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docker/loki/: local-config.yaml
docker/ollama/: pull_models.sh
docker/prometheus/: prometheus.yml
docker/tempo/: tempo.yml
sample_contracts/: nda_template.json  service_agreement.json
sample_contracts/incoming/: alfa_nda_incoming.json
sample_contracts/playbooks/: nda_playbook_ru.json
sample_contracts/templates/: nda_ru.json  service_agreement_ru.json
scripts/: seed_demo.py
src/: main.py
src/application/commands/: __init__.py  approve_reject_stage.py  archive_contract.py  create_contract_from_template.py  create_template.py  extract_obligations.py  publish_template_version.py  run_ai_review.py  start_approval_workflow.py  upload_incoming_contract.py
src/application/dto/: __init__.py  analytics_dto.py  contract_dto.py  obligation_dto.py  review_dto.py  template_dto.py  workflow_dto.py
src/application/interfaces/: __init__.py  i_embedding_service.py  i_file_storage.py  i_llm_service.py  i_notification_service.py  i_template_renderer.py
src/application/queries/: __init__.py  get_contract_detail.py  get_cycle_time_analytics.py  get_obligations_dashboard.py  get_review_result.py  list_contracts.py  search_contracts.py
src/application/use_cases/: compare_contract_versions.py  generate_negotiation_summary.py  render_template_preview.py  simulate_playbook.py
src/core/: config.py  container.py  logging.py  security.py  telemetry.py
src/domain/entities/: __init__.py  ai_analysis_run.py  approval_decision.py  approval_stage.py  approval_workflow.py  audit_entry.py  contract.py  (+8 more)
src/presentation/: deps.py  exception_handlers.py
tests/: conftest.py
tests/e2e/: __init__.py  test_contract_lifecycle.py  test_review_and_workflow.py
tests/integration/: test_health.py
tests/unit/: test_clause_splitter.py  test_contract_chunker.py  test_contract_risk_service.py  test_contract_transitions.py  test_document_normalizer.py  test_dsl_validator.py  test_mmr.py  test_obligation_entity.py  test_playbook_evaluator.py  test_rbac.py  test_sla_policy.py  test_snippet_builder.py  test_template_linter.py
(+140 files in other folders)
