[project]
name = "contractforge-ai-clm"
version = "0.1.0"
description = "AI-native Contract Lifecycle Management platform for Russian legal entities"
requires-python = ">=3.12,<3.14"

dependencies = [
  "fastapi[standard]>=0.115",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.3",
  "redis[hiredis]>=5.0",
  "celery[redis]>=5.3",
  "flower>=2.0",
  "httpx[http2]>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "dependency-injector>=4.41",
  "structlog>=24.1",
  "pyseto>=1.7",
  "passlib[bcrypt]>=1.7",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "langchain-ollama>=0.2",
  "langgraph>=0.2",
  "langfuse>=2.0",
  "prometheus-client>=0.20",
  "prometheus-fastapi-instrumentator>=7.0",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-api>=1.24",
  "opentelemetry-exporter-otlp>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
  "opentelemetry-instrumentation-httpx>=0.45b0",
  "opentelemetry-instrumentation-redis>=0.45b0",
  "opentelemetry-instrumentation-celery>=0.45b0",
  "pypdf>=4.2",
  "python-docx>=1.1",
  "tiktoken>=0.7",
  "sentence-transformers>=3.0",
  "jinja2>=3.1",
  "orjson>=3.10",
  "tenacity>=8.3",
  "slowapi>=0.1.9",
  "python-dateutil>=2.9",
  "minio>=7.2",
  "unstructured[pdf,docx]>=0.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "testcontainers[postgresql,redis]>=4.7",
  "respx>=0.21",
  "faker>=25.0",
  "hypothesis>=6.112",
  "ruff>=0.4",
  "mypy>=1.10",
  "bandit>=1.7",
  "safety>=3.2",
  "pre-commit>=3.7",
  "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E","W","F","I","B","UP","N","ASYNC","SIM","RUF"]
lint.ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
